-bug#0001497: Prevent constant reindexes if snmp agent continually returns uptime of 0
-bug#0001510: Speedup spine resorting hosts by estimated polling time
-bug: Add new option to enable Net-SNMP library vs. header versions
-bug: ICMP fails on some platforms
-bug: MySQL client auto reconnect default in MySQL 5.0.71 causes spine to crash

0.8.7e
-bug: Not all configuration paths are searched for spine.conf
-bug: If host has MAX OID's set to 0, timeouts occur
-bug: Properly detect full Cygwin installs by finding sh.exe
-bug: Don't perform TCP Ping retries in Windows. You cannot set socket send timeouts in Windows

0.8.7d
-bug#0001310: Feature request for poller.php- single host polling 
-bug#0001313: Spine takes an excessive amount of time timing out failed tcp pings
-bug#0001358: (cacti + spine) svn. Using snmp v3 constantly get "value: U", whereas snmpget returns correct value 
-bug#0001379: Ping.c might send more then retry_count icmp packages
-bug#0001381: configure script distributed with cacti-spine-0.8.7c is broken 
-bug#0001420: PCOMMAND: Poller[0] Host[80] WARNING: Recache Event Detected for Host 
-bug: A host that for some reason can not initialize snmp can cause a segfault
-bug: When using nifty popen, when the script times out, attempt to kill it
-bug: Under some platforms tcp and udp ping unresponsive
-bug: Availability messaging incorrect for snmpv3 hosts
-bug: TCP Pings that receive a connection refused are good pings
-bug: Avoid segmentation faults when Reindex table issues are found
-bug: When performing snmp_get's, dont assume no error means non-null response
-bug: Some snmp agents don't getnext on '.1' and need another oid '.1.3'
-bug: Net-snmp versioning breaks snmpV3
-bug: Use system level snmp_retries variable instead of 3
-feature: Add one additional debug message to the poller code to track data sources polled
-feature: Add more config paths for packagers
-feature: Allow specification of an optional hostlist instead of first and last hostid's