@@ -8,6 +8,7 @@ SVN
 -bug: Add new option to enable Net-SNMP library vs. header versions
 -bug: ICMP fails on some platforms
 -bug: MySQL client auto reconnect default in MySQL 5.0.71 causes spine to crash
+-bug: Inconsistent behavior when the poller interval has not been set
 
 0.8.7e
 -bug: Not all configuration paths are searched for spine.conf
